--- a/index.html
+++ b/index.html
@@ -191,14 +191,17 @@
     <!-- Navigation Bar -->
     <nav style="background: #1a237e; padding: 1rem 0; position: sticky; top: 0; z-index: 1000; box-shadow: 0 2px 10px rgba(0,0,0,0.2);">
         <div style="max-width: 1200px; margin: 0 auto; display: flex; justify-content: space-between; align-items: center; padding: 0 2rem;">
-            <a href="index.html" style="color: white; text-decoration: none; font-weight: bold; font-size: 1.2rem;">SoftAIDev</a>
-            <div style="display: flex; gap: 1.5rem;">
-                <a href="#products" style="color: white; text-decoration: none; padding: 0.5rem 1rem; border-radius: 4px; transition: background 0.3s;">Products</a>
-                <a href="#team" style="color: white; text-decoration: none; padding: 0.5rem 1rem; border-radius: 4px; transition: background 0.3s;">Team</a>
-                <a href="#contact" style="color: white; text-decoration: none; padding: 0.5rem 1rem; border-radius: 4px; transition: background 0.3s;">Contact</a>
-                <a href="marketplace.html" style="color: white; text-decoration: none; padding: 0.5rem 1rem; border-radius: 4px; background: #3949ab; transition: background 0.3s;">Marketplace</a>
-                <a href="login.html" style="color: white; text-decoration: none; padding: 0.5rem 1rem; border-radius: 4px; background: #4caf50; transition: background 0.3s;">Login</a>
-                <a href="signup.html" style="color: white; text-decoration: none; padding: 0.5rem 1rem; border-radius: 4px; background: #f57c00; transition: background 0.3s;">Sign Up</a>
+            <a href="index.html" style="color: white; text-decoration: none; font-weight: bold; font-size: 1.2rem;">
+                <img src="https://via.placeholder.com/30" alt="Logo" style="vertical-align: middle; margin-right: 10px;">
+                SoftAIDev
+            </a>
+            <div style="display: flex; gap: 1rem; flex-wrap: wrap; justify-content: center;">
+                <a href="#products" style="color: white; text-decoration: none; padding: 0.5rem 1rem; border-radius: 4px; transition: background 0.3s; white-space: nowrap;">Products</a>
+                <a href="#team" style="color: white; text-decoration: none; padding: 0.5rem 1rem; border-radius: 4px; transition: background 0.3s; white-space: nowrap;">Team</a>
+                <a href="#contact" style="color: white; text-decoration: none; padding: 0.5rem 1rem; border-radius: 4px; transition: background 0.3s; white-space: nowrap;">Contact</a>
+                <a href="marketplace.html" style="color: white; text-decoration: none; padding: 0.5rem 1rem; border-radius: 4px; background: #3949ab; transition: background 0.3s; white-space: nowrap;">Marketplace</a>
+                <a href="login.html" style="color: white; text-decoration: none; padding: 0.5rem 1rem; border-radius: 4px; background: #4caf50; transition: background 0.3s; white-space: nowrap;">Login</a>
+                <a href="signup.html" style="color: white; text-decoration: none; padding: 0.5rem 1rem; border-radius: 4px; background: #f57c00; transition: background 0.3s; white-space: nowrap;">Sign Up</a>
             </div>
         </div>
     </nav>
