marketplace: add pyramids at bottom and centered half-visible sphinx; remove Amazon promo from homepage

--- a/marketplace.html
+++ b/marketplace.html
@@ -9,6 +9,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@700&family=Noto+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <img class="decor-pyramids" src="https://images.unsplash.com/photo-1542556391-0f2b4aa1b8f5?auto=format&fit=crop&w=1200&q=80" alt="Three pyramids decorative image" />
+    <img class="decor-sphinx-center" src="https://images.unsplash.com/photo-1544986581-efac024faf62?auto=format&fit=crop&w=1200&q=80" alt="Sphinx decorative image" />
     <header class="marketplace-header">
         <div class="header-content">
             <h1><i class="fas fa-ankh"></i> Tutankaten Market Place</h1>
