--- a/services.html
+++ b/services.html
@@ -3,7 +3,31 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Services - SoftAIDev</title>
+  <meta name="description" content="Explore our professional software development services including custom Android apps, web development, and business solutions. Specializing in Ancient Egyptian hieroglyph translation technology.">
+  <meta name="keywords" content="software development services, Android app development, custom software solutions, business software, hieroglyph translation technology, web development">
+  <meta name="robots" content="index, follow">
+  <meta name="author" content="SoftAIDev">
+  <link rel="canonical" href="https://hotwodi.github.io/softaidev/services.html" />
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://hotwodi.github.io/softaidev/services.html">
+  <meta property="og:title" content="Professional Software Development Services | SoftAIDev">
+  <meta property="og:description" content="Custom software solutions including Android apps, web development, and our specialized Ancient Egyptian hieroglyph translation technology.">
+  <meta property="og:image" content="https://hotwodi.github.io/softaidev/images/services-preview.jpg">
+  <meta property="og:site_name" content="SoftAIDev">
+  <meta property="og:locale" content="en_US">
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:url" content="https://hotwodi.github.io/softaidev/services.html">
+  <meta name="twitter:title" content="Professional Software Development Services | SoftAIDev">
+  <meta name="twitter:description" content="Custom software solutions including Android apps, web development, and our specialized Ancient Egyptian hieroglyph translation technology.">
+  <meta name="twitter:image" content="https://hotwodi.github.io/softaidev/images/services-preview.jpg">
+  <meta name="twitter:site" content="@softaidev">
+  <meta name="twitter:creator" content="@softaidev">
+
+  <title>Professional Software Development Services | SoftAIDev</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
@@ -22,13 +46,73 @@
     .cta { margin-top:1.5rem; display:inline-block; background:#3949ab; color:#fff; padding:.7rem 1.2rem; border-radius:6px; text-decoration:none; }
     footer { text-align:center; padding:2rem; color:#666; }
   </style>
+
+    <!-- Add Font Awesome for home icon -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <!-- Add home button and image handling -->
+    <link rel="stylesheet" href="css/home-button.css">
 </head>
 <body>
+    <!-- Schema.org structured data for Services -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "ItemList",
+      "itemListElement": [
+        {
+          "@type": "Service",
+          "position": 1,
+          "name": "Ancient Egyptian Hieroglyph Translator",
+          "description": "Advanced translation tool for Ancient Egyptian hieroglyphs with dictionary and pronunciation guide.",
+          "provider": {
+            "@type": "Organization",
+            "name": "SoftAIDev"
+          },
+          "offers": {
+            "@type": "Offer",
+            "price": "0",
+            "priceCurrency": "USD"
+          }
+        },
+        {
+          "@type": "Service",
+          "position": 2,
+          "name": "Software Development Tracker",
+          "description": "Comprehensive tool for tracking software development projects, milestones, and team productivity.",
+          "provider": {
+            "@type": "Organization",
+            "name": "SoftAIDev"
+          },
+          "offers": {
+            "@type": "Offer",
+            "price": "0",
+            "priceCurrency": "USD"
+          }
+        },
+        {
+          "@type": "Service",
+          "position": 3,
+          "name": "Digital Drawing App",
+          "description": "Professional drawing and design application with advanced tools for digital artists.",
+          "provider": {
+            "@type": "Organization",
+            "name": "SoftAIDev"
+          },
+          "offers": {
+            "@type": "Offer",
+            "price": "0",
+            "priceCurrency": "USD"
+          }
+        }
+      ]
+    }
+    </script>
   <nav>
     <div class="inner">
       <a href="index.html">SoftAIDev</a>
       <div class="links">
         <a href="services.html" style="background:#283593;">Services</a>
+        <a href="blog.html">Blog</a>
         <a href="team.html">Team</a>
         <a href="contact.html">Contact</a>
         <a href="marketplace.html">Marketplace</a>
@@ -71,5 +155,9 @@
   <footer>
     © 2025 SoftAIDev
   </footer>
+    
+    <!-- Add image handler script -->
+    <script src="js/image-handler.js" defer></script>
+
 </body>
 </html>
