--- a/signup.html
+++ b/signup.html
@@ -85,6 +85,11 @@
             max-width: 85vw;
         }
     </style>
+
+    <!-- Add Font Awesome for home icon -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <!-- Add home button and image handling -->
+    <link rel="stylesheet" href="css/home-button.css">
 </head>
 <body>
     <img class="decor-sphinx" src="https://images.unsplash.com/photo-1544986581-efac024faf62?auto=format&fit=crop&w=600&q=80" alt="The Great Sphinx of Giza decorative image" />
@@ -157,5 +162,9 @@
             }
         });
     </script>
+    
+    <!-- Add image handler script -->
+    <script src="js/image-handler.js" defer></script>
+
 </body>
 </html>
