--- a/test-communication-flows.html
+++ b/test-communication-flows.html
@@ -204,6 +204,11 @@
             text-decoration: underline;
         }
     </style>
+
+    <!-- Add Font Awesome for home icon -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <!-- Add home button and image handling -->
+    <link rel="stylesheet" href="css/home-button.css">
 </head>
 <body>
     <div class="container">
@@ -741,5 +746,9 @@
             logInfo('Configure test parameters and click "Run All Tests" to begin');
         });
     </script>
+    
+    <!-- Add image handler script -->
+    <script src="js/image-handler.js" defer></script>
+
 </body>
 </html>
