--- a/contact.html
+++ b/contact.html
@@ -22,6 +22,11 @@
     .info { margin-top:1rem; color:#555; }
     footer { text-align:center; padding:2rem; color:#666; }
   </style>
+
+    <!-- Add Font Awesome for home icon -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <!-- Add home button and image handling -->
+    <link rel="stylesheet" href="css/home-button.css">
 </head>
 <body>
   <nav>
@@ -29,6 +34,7 @@
       <a href="index.html">SoftAIDev</a>
       <div class="links">
         <a href="services.html">Services</a>
+        <a href="blog.html">Blog</a>
         <a href="team.html">Team</a>
         <a href="contact.html" style="background:#283593;">Contact</a>
         <a href="marketplace.html">Marketplace</a>
@@ -42,7 +48,12 @@
     @keyframes scroll-left { 0% { transform: translateX(0);} 100% { transform: translateX(-100%);} }
     #marketplace-banner:hover span { animation-play-state: paused; }
   </style>
-  <div id="marketplace-banner" style="background:#ffe082; color:#1a237e; overflow:hidden; white-space:nowrap; border-bottom:1px solid #f0c14b;">
+  
+    <!-- Add Font Awesome for home icon -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <!-- Add home button and image handling -->
+    <link rel="stylesheet" href="css/home-button.css">
+<div id="marketplace-banner" style="background:#ffe082; color:#1a237e; overflow:hidden; white-space:nowrap; border-bottom:1px solid #f0c14b;">
     <a href="marketplace.html" style="display:inline-block; width:100%; text-decoration:none; color:#1a237e; font-weight:600;">
       <span style="display:inline-block; padding:10px 0; padding-left:100%; animation: scroll-left 12s linear infinite;">
         👉 Enter Market Place
@@ -73,5 +84,9 @@
   <footer>
     © 2025 SoftAIDev
   </footer>
+    
+    <!-- Add image handler script -->
+    <script src="js/image-handler.js" defer></script>
+
 </body>
 </html>
