--- a/team.html
+++ b/team.html
@@ -22,6 +22,11 @@
     .role { color:#666; font-size:.9rem; margin:.25rem 0 .5rem 0; }
     footer { text-align:center; padding:2rem; color:#666; }
   </style>
+
+    <!-- Add Font Awesome for home icon -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <!-- Add home button and image handling -->
+    <link rel="stylesheet" href="css/home-button.css">
 </head>
 <body>
   <nav>
@@ -29,6 +34,7 @@
       <a href="index.html">SoftAIDev</a>
       <div class="links">
         <a href="services.html">Services</a>
+        <a href="blog.html">Blog</a>
         <a href="team.html" style="background:#283593;">Team</a>
         <a href="contact.html">Contact</a>
         <a href="marketplace.html">Marketplace</a>
@@ -77,5 +83,9 @@
   <footer>
     © 2025 SoftAIDev
   </footer>
+    
+    <!-- Add image handler script -->
+    <script src="js/image-handler.js" defer></script>
+
 </body>
 </html>
