--- a/virtual-assistant-admin.html
+++ b/virtual-assistant-admin.html
@@ -183,7 +183,12 @@
         }
     </style>
 
-    <script type="module" src="js/services/supabaseService.js"></script>
+    
+    <!-- Add Font Awesome for home icon -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <!-- Add home button and image handling -->
+    <link rel="stylesheet" href="css/home-button.css">
+<script type="module" src="js/services/supabaseService.js"></script>
     <script type="module" src="js/services/assistantService.js"></script>
     <script type="module" src="js/auth.js"></script>
     <script src="js/virtual-assistant-admin.js"></script>
@@ -224,5 +229,9 @@
             console.log('Admin interface initialized');
         }
     </script>
+    
+    <!-- Add image handler script -->
+    <script src="js/image-handler.js" defer></script>
+
 </body>
 </html>
