--- a/virtual-assistant.html
+++ b/virtual-assistant.html
@@ -210,12 +210,21 @@
         }
     </style>
 
-    <script type="module" src="js/services/supabaseService.js"></script>
+    
+    <!-- Add Font Awesome for home icon -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <!-- Add home button and image handling -->
+    <link rel="stylesheet" href="css/home-button.css">
+<script type="module" src="js/services/supabaseService.js"></script>
     <script type="module" src="js/services/assistantService.js"></script>
     <script src="js/virtual-assistant.js"></script>
     <script type="module" src="js/email-handler.js"></script>
     <script type="module" src="js/chat-handler.js"></script>
     <script src="js/voip-handler.js"></script>
     <script src="js/modal-handlers.js"></script>
+    
+    <!-- Add image handler script -->
+    <script src="js/image-handler.js" defer></script>
+
 </body>
 </html>
