--- a/blog.html
+++ b/blog.html
@@ -145,11 +145,11 @@
         </div>
     </main>
 
-    <footer>
+    <footer><div style="text-align: center;">
         <div class="container">
             <p>&copy; 2025 SoftAIDev. All rights reserved.</p>
             <p>Connect with us for your next software project</p>
         </div>
-    </footer>
+    <br><a href="privacy-policy.html" style="color: #1a237e; text-decoration: underline;">Privacy Policy</a></div></footer>
 </body>
 </html>
