--- a/index.html
+++ b/index.html
@@ -372,10 +372,10 @@
             </div>
         </section>
     </div>
-    <footer>
+    <footer><div style="text-align: center;">
         &copy; 2025 SoftAIDev. All rights reserved.<br>
         <span style="font-size:0.95em;">Connect with us for your next project!</span>
-    </footer>
+    <br><a href="privacy-policy.html" style="color: #1a237e; text-decoration: underline;">Privacy Policy</a></div></footer>
 </body>
 </html>
         <section id="team" style="margin:3rem 0;">
@@ -497,9 +497,9 @@
             </div>
         </section>
     </div>
-    <footer>
+    <footer><div style="text-align: center;">
         &copy; 2025 SoftAIDev. All rights reserved.<br>
         <span style="font-size:0.95em;">Connect with us for your next project!</span>
-    </footer>
+    <br><a href="privacy-policy.html" style="color: #1a237e; text-decoration: underline;">Privacy Policy</a></div></footer>
 </body>
 </html>
