--- a/marketplace.html
+++ b/marketplace.html
@@ -117,7 +117,7 @@
         </div>
     </div>
 
-    <footer class="marketplace-footer" role="contentinfo">
+    <footer class="marketplace-footer" role="contentinfo"><div style="text-align: center;">
         <div class="security-note">
             <i class="fas fa-shield-alt" aria-hidden="true"></i>
             <p>All APKs are scanned for security. Please ensure you have "Unknown Sources" enabled in your device settings to install these applications.</p>
@@ -129,7 +129,7 @@
             <a href="#">Contact</a>
         </nav>
         <p class="copyright">&copy; 2025 Tutankaten Market Place. All rights reserved.</p>
-    </footer>
+    <br><a href="privacy-policy.html" style="color: #1a237e; text-decoration: underline;">Privacy Policy</a></div></footer>
 
     <!-- Add screen reader only styles -->
     <style>
