--- a/team.html
+++ b/team.html
@@ -80,9 +80,9 @@
     </section>
   </main>
 
-  <footer>
+  <footer><div style="text-align: center;">
     © 2025 SoftAIDev
-  </footer>
+  <br><a href="privacy-policy.html" style="color: #1a237e; text-decoration: underline;">Privacy Policy</a></div></footer>
     
     <!-- Add image handler script -->
     <script src="js/image-handler.js" defer></script>
