--- a/marketplace.html
+++ b/marketplace.html
@@ -1,6 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>SoftAIDev Marketplace</title>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
+  <style>body{font-family:Montserrat,Arial,sans-serif;margin:0;background:#f4f7fa}header{background:linear-gradient(90deg,#1a237e 60%,#3949ab 100%);color:#fff;padding:2rem;text-align:center}nav{background:#283593;padding:0.8rem;text-align:center}nav a{color:#fff;margin:0 0.5rem;text-decoration:none;font-weight:600}main{max-width:1100px;margin:2rem auto;padding:0 1rem}figure.hero{margin:0;border-radius:8px;overflow:hidden;box-shadow:0 4px 16px rgba(0,0,0,0.08)}figure.hero img{width:100%;display:block}figcaption{padding:1rem;background:#fff;text-align:center;font-weight:600;color:#333}</style>
+</head>
+<body>
+  <header>
+    <h1 style="margin:0;">SoftAIDev Marketplace</h1>
+    <p style="margin:0.5rem 0 0 0;color:#e3e3e3;">Discover our featured listings</p>
+  </header>
+  <nav>
+    <a href="/index.html">Home</a>
+    <a href="/marketplace.html">Marketplace</a>
+    <a href="/index.html#contact">Contact</a>
+  </nav>
+  <main>
+    <figure class="hero">
+      <img src="https://images.unsplash.com/photo-1515168833906-d2a3b82b302b?auto=format&fit=crop&w=1400&q=80" alt="Cocktail on a tray with mountain background">
+      <figcaption>Discover Ancient Treasures for Your Device — featured listing</figcaption>
+    </figure>
+
+    <section style="margin-top:1.5rem;background:#fff;padding:1.5rem;border-radius:10px;box-shadow:0 4px 16px rgba(0,0,0,0.04);">
+      <h2 style="margin-top:0;color:#1a237e;">Featured Product</h2>
+      <p>Find unique digital goods and tools on our Amazon store. Browse featured products and read reviews from our customers.</p>
+    </section>
+  </main>
+</body>
+</html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tutankaten Market Place</title>
@@ -14,7 +46,14 @@
             <h1><i class="fas fa-ankh"></i> Tutankaten Market Place</h1>
             <p>Discover Ancient Treasures for Your Device</p>
         </div>
+        <div style="width:100%;max-width:1200px;margin:1rem auto;padding:0 1rem;">
+            <img src="https://images.unsplash.com/photo-1515168833906-d2a3b82b302b?auto=format&fit=crop&w=1400&q=80" alt="Happy Client / Wine" style="width:100%;border-radius:8px;box-shadow:0 2px 10px rgba(0,0,0,0.12);">
+        </div>
     </header>
+    <nav style="background:#fff;padding:0.5rem;text-align:center;border-bottom:1px solid #eee;">
+        <a href="/index.html" style="margin:0 1rem;color:#3949ab;font-weight:600;text-decoration:none;">Home</a>
+        <a href="/marketplace.html" style="margin:0 1rem;color:#3949ab;font-weight:600;text-decoration:none;">Marketplace</a>
+    </nav>
 
     <div class="container">
         <div class="search-filter-bar">
