--- a/marketplace.html
+++ b/marketplace.html
@@ -27,78 +27,52 @@
     <!-- Rolling Security Banner removed -->
 
     <main id="main-content" class="container" role="main">
-        <div class="search-filter-bar">
-            <div class="search-box">
-                <input type="text" id="searchInput" placeholder="Search apps...">
-                <button><i class="fas fa-search"></i></button>
-            </div>
-            <div class="filter-controls">
-                <select id="categoryFilter">
-                    <option value="">All Categories</option>
-                    <option value="daw">DAWs</option>
-                    <option value="productivity">Productivity</option>
-                    <option value="game">Games</option>
-                    <option value="utility">Utilities</option>
-                </select>
-                <select id="sortBy">
-                    <option value="newest">Newest First</option>
-                <label for="priceMin" class="sr-only">Minimum price</label>
-                <input type="number" id="priceMin" placeholder="Min $" min="0" step="0.01" aria-label="Minimum price">
-                <label for="priceMax" class="sr-only">Maximum price</label>
-                <input type="number" id="priceMax" placeholder="Max $" min="0" step="0.01" aria-label="Maximum price">
-                <label for="sortBy" class="sr-only">Sort results</label>
-                <select id="sortBy" aria-label="Sort results">
-                    <option value="price_desc">Price: High to Low</option>
-                    <option value="price_asc">Price: Low to High</option>
-                    <option value="newest">Newest</option>
-                    <option value="popular">Most Popular</option>
-                    <option value="name">A to Z</option>
-                </select>
-            </div>
+        <div class="crm-cta" style="max-width:1200px;margin:2rem auto;text-align:center;">
+            <a href="https://www.crm.softaidev.com" target="_blank" rel="noopener noreferrer" class="crm-link">Open CRM</a>
         </div>
 
         <div class="app-grid" id="appGrid">
-            <!-- App cards will be dynamically inserted here -->
+            <!-- Product cards or placeholders could go here -->
         </div>
-    </div>
 
-    <!-- App Details Modal -->
-    <div class="modal" id="appModal">
-        <div class="modal-content">
-            <span class="close-btn">&times;</span>
-            <div class="modal-body">
-                <div class="app-details">
-                    <div class="app-header">
-                        <img src="" alt="App Icon" class="app-icon-large">
-                        <div class="app-info">
-                            <h2 class="app-title"></h2>
-                            <div class="app-meta">
-                                <span class="version"></span>
-                                <span class="category"></span>
-                                <div class="rating">
-                                    <i class="fas fa-star"></i>
-                                    <i class="fas fa-star"></i>
-                                    <i class="fas fa-star"></i>
-                                    <i class="fas fa-star"></i>
-                                    <i class="far fa-star"></i>
-                                    <span class="rating-count">(24)</span>
+        <!-- App Details Modal -->
+        <div class="modal" id="appModal" aria-hidden="true" role="dialog" aria-modal="true">
+            <div class="modal-content">
+                <span class="close-btn" role="button" aria-label="Close">&times;</span>
+                <div class="modal-body">
+                    <div class="app-details">
+                        <div class="app-header">
+                            <img src="" alt="App Icon" class="app-icon-large">
+                            <div class="app-info">
+                                <h2 class="app-title"></h2>
+                                <div class="app-meta">
+                                    <span class="version"></span>
+                                    <span class="category"></span>
+                                    <div class="rating">
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="far fa-star"></i>
+                                        <span class="rating-count">(24)</span>
+                                    </div>
                                 </div>
                             </div>
+                            <button class="download-btn">Download APK</button>
                         </div>
-                        <button class="download-btn">Download APK</button>
-                    </div>
-                    <div class="app-screenshots">
-                        <div class="screenshot">
-                            <img src="" alt="Screenshot 1">
+                        <div class="app-screenshots">
+                            <div class="screenshot">
+                                <img src="" alt="Screenshot 1">
+                            </div>
+                            <div class="screenshot">
+                                <img src="" alt="Screenshot 2">
+                            </div>
                         </div>
-                        <div class="screenshot">
-                            <img src="" alt="Screenshot 2">
+                        <div class="app-description"></div>
+                        <div class="app-permissions">
+                            <h3>Permissions Required</h3>
+                            <ul class="permissions-list"></ul>
                         </div>
-                    </div>
-                    <div class="app-description"></div>
-                    <div class="app-permissions">
-                        <h3>Permissions Required</h3>
-                        <ul class="permissions-list"></ul>
                     </div>
                 </div>
             </div>
