Update marketplace: replace search/filter with CRM CTA; fix URL to https://crm.softaidev.com/ and enlarge CTA styling

--- a/marketplace.html
+++ b/marketplace.html
@@ -28,7 +28,7 @@
 
     <main id="main-content" class="container" role="main">
         <div class="crm-cta" style="max-width:1200px;margin:2rem auto;text-align:center;">
-            <a href="https://www.crm.softaidev.com" target="_blank" rel="noopener noreferrer" class="crm-link">Open CRM</a>
+            <a href="https://crm.softaidev.com/" target="_blank" rel="noopener noreferrer" class="crm-link">Open CRM</a>
         </div>
 
         <div class="app-grid" id="appGrid">
